[package]
name = "esp32-usb-joystick-async"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.23.1", features = [
    "esp32s3",
] }
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.5.0" }
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",
] }
embassy-time     = { version = "0.4",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32s3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
critical-section = "1.2.0"
embassy-usb = "0.4.0"
usbd-hid = "0.8.2"
libm = "0.2.11"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
embassy-sync = "0.6.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
